--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@
 .DS_Store
 *.pem
 
+
+# create cloud gaming website god krishna 
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -39,3 +42,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
